discord_themes/addons/alky_CV_addons.css
/* ... */
.layer-2aCOJ3 > .popout-1KHNAq .option-2eIyOn[aria-selected="true"] > .selectedIcon-19TbzU{
    display: none;
    /*removes check circle for selected option*/
}
/*-----BOTTOM LEFT PROFILE TAB-----*/
section[aria-label="User area" i] > .container-YkUktl {
    --avatar-change: 8;
  
    padding-top: 3px;
    padding-bottom: 3px;
    /*Adds spacing upwards and downwards*/
}
section[aria-label="User area" i] .wrapper-1VLyxH{
    width: calc(32px + var(--avatar-change, 0) * 1px) !important; /*default: 32px*/
    height: calc(32px + var(--avatar-change, 0) * 1px) !important;
    /*Increased avatar size*/
}
/* Keeps avatar same upon hover */
.container-YkUktl .avatar-1EWyVD:after {
    display: none;
}
.container-YkUktl .avatar-1EWyVD:hover foreignObject{
    opacity: 1;
}
/* Readable RTC connection text*/
.container-1zzFcN .rtcConnectionStatus-c5A6Av+a .channel-3prF2u{
    color: rgb(255,255,255,0.5);
}
/* MUTE/DEAFEN/SETTINGS BUTTONS */
/* Unhovered buttons */
[aria-label="User area"] [aria-label="Set Status"]+div{
    background: rgb(var(--main-color-numerical),0.3);
}
[aria-label="User area"] [aria-label="Set Status"]+div div > svg {
    opacity: 0.9;
    /*opacity for all the button icons*/
}
[aria-label="User area"] [aria-label="Set Status"]+div button path{
    fill: var(--main-color);
    /*adds color for all the button icons when not on hover*/
    transition: all 350ms ease-in-out;
    /*specifically stabilizes transition when hovering off icon*/
}
/* Hovered buttons */
[aria-label="User area"] [aria-label="Set Status"]+div button:hover{
    background-color: var(--main-color);
    /*sets background color to icon on hover*/
}
/* Button Separators */
[aria-label="User area"] [aria-label="Set Status"]+div button:before{
    display: none;
    /*removes the thin lines between icons*/
}
/* Border radius correction on hover*/
[aria-label="User area"] button[aria-label="Mute"]:hover{
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}
[aria-label="User area"] button[aria-label="User Settings"]:hover{
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}
/*-----CONTEXT MENUS, SUBMENUS & SEARCH BOX-----*/
[class^="addGamePopout-"][aria-label="Add Game"],
#channel-context,
#guild-context,
#guild-header-popout,
#message,
#user-context, #user-profile-actions,
#status-picker, #uid_33, #message [aria-activedescendant^="message"],
#user-context [aria-activedescendant^="user-context"],
#status-picker [aria-activedescendant^="status-picker"] {
    background: #000;
    border-radius: 15px;
    /*includes #status-picker, submenus among other things*/
}
/*-----CHAT BOX-----*/
/* JOIN BUTTON */
/*ex. the join button when receive server invite*/
[data-list-id="chat-messages"] button[class*="lookFilled"][class*="colorGreen"]{
    background: rgb(var(--main-color-numerical),0.5) !important;
    border: 2px solid var(--main-color) !important;
}
[data-list-id="chat-messages"] button[class*="lookFilled"][class*="colorGreen"]:hover{
    background: var(--main-color) !important;
}
/* LARGER PROFILE PIC IN CHAT BOX */
.message-2CShn3.cozy-VmLDNB{
    --chat-avatar-change: 1rem;
}
.message-2CShn3.cozy-VmLDNB .contents-2MsGLg img.avatar-2e8lTP,
.message-2CShn3.cozy-VmLDNB > .repliedMessage-3Z6XBG{
    top: calc(0.2rem - max(0rem, calc(var(--chat-avatar-change) - 1rem)));  
}
.message-2CShn3.cozy-VmLDNB .contents-2MsGLg img.avatar-2e8lTP{
    width: calc(2.5rem + var(--chat-avatar-change)); /*default: 2.5rem when scaled down, otherwise 40px*/
    height: calc(2.5rem + var(--chat-avatar-change));
    left: calc(0.2*var(--chat-avatar-change) + 0.6rem); /*better than the default postioning*/
    margin-top: 0;
}
.message-2CShn3.cozy-VmLDNB.hasReply-2Cr4KE .contents-2MsGLg img.avatar-2e8lTP{
    top: 1.5rem;
}
/* ADJUSTED PADDING TO FIT LARGER PICS */
.message-2CShn3.groupStart-3Mlgv1.cozy-VmLDNB.wrapper-30-Nkg{
    padding-top: 0rem;
}
.message-2CShn3.cozy-VmLDNB.wrapper-30-Nkg{
    --text-size-adjust: calc(1rem - 18px);
    padding-left: calc(72px + 1.25*var(--chat-avatar-change) + 3.5*var(--text-size-adjust)); /*default: 72px*/
}
.message-2CShn3.cozy-VmLDNB [id^="message-reply-context-"]{ 
    bottom: calc(var(--chat-avatar-change) - 0.05rem);
    right: calc(var(--chat-avatar-change)*0.55 + 0.1rem + 1.5*var(--text-size-adjust)); /*0.1rem is important, otherwise is off center*/
}
/* MINIMIZE LONG USERNAME */
.contents-2MsGLg > .header-2jRmjb > .headerText-2z4IhQ >.username-h_Y3Us{
    display: inline-block;
    text-overflow: ellipsis;
    max-width: 30%;
    white-space: nowrap;
}
.markup-eYLPri.messageContent-2t3eCI .container-x059i8 .anchorUnderlineOnHover-2qPutX {
    max-width: 30%;
}
.markup-eYLPri.messageContent-2t3eCI .container-x059i8 .anchorUnderlineOnHover-2qPutX span{
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    white-space: nowrap;
}
/* COMPACT USERNAME FIX */
.compact-2Nkcau .contents-2MsGLg .username-h_Y3Us{
    text-indent: 0px;
}
/* TALL USERNAME ADJUSTMENT (e.g. special characters) */
.message-2CShn3 .contents-2MsGLg > .header-2jRmjb,
.markup-eYLPri.messageContent-2t3eCI .container-x059i8 .content-vSHmMD{
    --chat-box-username-height: 2.5rem;
}
.message-2CShn3 .contents-2MsGLg > .header-2jRmjb > .headerText-2z4IhQ >.username-h_Y3Us,
.markup-eYLPri.messageContent-2t3eCI .container-x059i8 .content-vSHmMD{
    line-height: var(--chat-box-username-height, 1.375rem);
}
.message-2CShn3 .contents-2MsGLg > .header-2jRmjb > .headerText-2z4IhQ >.username-h_Y3Us{
    bottom: calc(var(--chat-box-username-height, 1.375rem) - 2rem);
}
.message-2CShn3.cozy-VmLDNB .contents-2MsGLg > .header-2jRmjb .timestamp-p1Df1m{
    position: relative;
    bottom: calc(1.375*var(--chat-box-username-height, 1.375rem) - 2rem);
}
.message-2CShn3:not(.systemMessage-1H1Z20) .messageContent-2t3eCI:not(.repliedTextContent-2hOYMB){
    position: relative;
    bottom: 0.875rem;
}
/* ... */

